oriterm_ui/src/widgets/tab_bar/snapshots/oriterm_ui__widgets__tab_bar__tests__golden_many_tabs_narrow_window.snap
---
source: oriterm_ui/src/widgets/tab_bar/tests.rs
assertion_line: 2086
expression: snap
---
Scene: 14 quads, 10 text, 11 lines, 0 icons, 0 images
  Q00 (0.0, 0.0, 600.0×36.0) fill=#16161c
  Q01 (0.0, 34.0, 600.0×2.0) fill=#2a2a36
  Q02 (80.0, 0.0, 80.0×36.0) fill=#16161c
  Q03 (160.0, 0.0, 80.0×36.0) fill=#16161c
  Q04 (240.0, 0.0, 80.0×36.0) fill=#16161c
  Q05 (320.0, 0.0, 80.0×36.0) fill=#16161c
  Q06 (400.0, 0.0, 80.0×36.0) fill=#16161c
  Q07 (480.0, 0.0, 80.0×36.0) fill=#16161c
  Q08 (560.0, 0.0, 80.0×36.0) fill=#16161c
  Q09 (640.0, 0.0, 80.0×36.0) fill=#16161c
  Q10 (720.0, 0.0, 80.0×36.0) fill=#16161c
  Q11 (0.0, 0.0, 80.0×36.0) fill=#0e0e12
  Q12 (0.0, 0.0, 80.0×2.0) fill=#6d9be0
  Q13 (0.0, 34.0, 80.0×2.0) fill=#0e0e12
  T00 (94.0, 10.0) "Tab 2" 40.0×16.0 #9494a8
  T01 (174.0, 10.0) "Tab 3" 40.0×16.0 #9494a8
  T02 (254.0, 10.0) "Tab 4" 40.0×16.0 #9494a8
  T03 (334.0, 10.0) "Tab 5" 40.0×16.0 #9494a8
  T04 (414.0, 10.0) "Tab 6" 40.0×16.0 #9494a8
  T05 (494.0, 10.0) "Tab 7" 40.0×16.0 #9494a8
  T06 (574.0, 10.0) "Tab 8" 40.0×16.0 #9494a8
  T07 (654.0, 10.0) "Tab 9" 40.0×16.0 #9494a8
  T08 (734.0, 10.0) "Tab 10" 48.0×16.0 #9494a8
  T09 (14.0, 10.0) "Tab 1" 40.0×16.0 #d4d4dc
  L00 (160.0, 0.0)→(160.0, 36.0) w=1.0 #2a2a36
  L01 (240.0, 0.0)→(240.0, 36.0) w=1.0 #2a2a36
  L02 (320.0, 0.0)→(320.0, 36.0) w=1.0 #2a2a36
  L03 (400.0, 0.0)→(400.0, 36.0) w=1.0 #2a2a36
  L04 (480.0, 0.0)→(480.0, 36.0) w=1.0 #2a2a36
  L05 (560.0, 0.0)→(560.0, 36.0) w=1.0 #2a2a36
  L06 (640.0, 0.0)→(640.0, 36.0) w=1.0 #2a2a36
  L07 (720.0, 0.0)→(720.0, 36.0) w=1.0 #2a2a36
  L08 (800.0, 0.0)→(800.0, 36.0) w=1.0 #2a2a36
  L09 (800.0, 0.0)→(800.0, 36.0) w=1.0 #2a2a36
  L10 (838.0, 0.0)→(838.0, 36.0) w=1.0 #2a2a36
