oriterm_ui/src/widgets/tab_bar/snapshots/oriterm_ui__widgets__tab_bar__tests__golden_three_tabs.snap
---
source: oriterm_ui/src/widgets/tab_bar/tests.rs
assertion_line: 2080
expression: snap
---
Scene: 7 quads, 3 text, 4 lines, 0 icons, 0 images
  Q00 (0.0, 0.0, 800.0×36.0) fill=#16161c
  Q01 (0.0, 34.0, 800.0×2.0) fill=#2a2a36
  Q02 (200.0, 0.0, 200.0×36.0) fill=#16161c
  Q03 (400.0, 0.0, 200.0×36.0) fill=#16161c
  Q04 (0.0, 0.0, 200.0×36.0) fill=#0e0e12
  Q05 (0.0, 0.0, 200.0×2.0) fill=#6d9be0
  Q06 (0.0, 34.0, 200.0×2.0) fill=#0e0e12
  T00 (214.0, 10.0) "Tab 2" 40.0×16.0 #9494a8
  T01 (414.0, 10.0) "Tab 3" 40.0×16.0 #9494a8
  T02 (14.0, 10.0) "Tab 1" 40.0×16.0 #d4d4dc
  L00 (400.0, 0.0)→(400.0, 36.0) w=1.0 #2a2a36
  L01 (600.0, 0.0)→(600.0, 36.0) w=1.0 #2a2a36
  L02 (600.0, 0.0)→(600.0, 36.0) w=1.0 #2a2a36
  L03 (638.0, 0.0)→(638.0, 36.0) w=1.0 #2a2a36
